tests/functionalTests/invalid/code/invalidMainFunType2.hs
main :: Int;
main = 4;
